--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="foto"src="imagens/logodaloja.png" alt="logoloja">
         <h1>@Zero_Um_Multimarcas </h1>
         
-        <p>A ZERO UM DOS CRIA <i class='bx bx-crown'></i></p>
+        <p>A ZERO UM DOS CRIAS <i class='bx bx-crown'></i></p>
         
         </header>
 
